syntax = "proto3";

package rover.campaigns.v1;

option go_package = "campaigns/v1;campaignspb";

import "auth/v1/auth.proto";
import "protobuf/predicates.proto";

import "google/protobuf/timestamp.proto";


service Campaigns {
  //
  // CRUD
  //
  rpc List(ListRequest) returns (ListResponse);

  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Duplicate(DuplicateRequest) returns (DuplicateResponse);
  rpc Rename(RenameRequest) returns (RenameResponse);

  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Unpublish(UnpublishRequest) returns (UnpublishResponse);
  rpc Archive(ArchiveRequest) returns (ArchiveResponse);
  rpc Unarchive(UnarchiveRequest) returns (UnarchiveResponse);

  rpc SendTest(SendTestRequest) returns (SendTestResponse);

  rpc UpdateNotificationSettings(UpdateNotificationSettingsRequest) returns (UpdateNotificationSettingsResponse);
  rpc UpdateScheduledDeliverySettings(UpdateScheduledDeliverySettingsRequest) returns (UpdateScheduledDeliverySettingsResponse);
  rpc UpdateAutomatedDeliverySettings(UpdateAutomatedDeliverySettingsRequest) returns (UpdateAutomatedDeliverySettingsResponse);
}

message CampaignType {
  enum Enum {
    UNKNOWN = 0;
    SCHEDULED_NOTIFICATION = 1;
    AUTOMATED_NOTIFICATION = 2;
  }
}

message CampaignStatus {
  enum Enum {
    UNKNOWN = 0;
    DRAFT     = 1;
    PUBLISHED = 2;
    ARCHIVED  = 3;
  }
}

message SegmentCondition {
  enum Enum {
    ANY = 0;
    ALL = 1;
  }
}

message NotificationTapBehaviorType {
  enum Enum {
    OPEN_EXPERIENCE = 0;
    OPEN_APP        = 1;
    OPEN_DEEP_LINK  = 2;
    OPEN_WEBSITE    = 3;
  }
}

message NotificationTapPresentationType {
  enum Enum {
    UNKNOWN       = 0;
    IN_APP        = 1;
    IN_BROWSER    = 2;
  }
}

message ScheduledType {
  enum Enum {
    NOW          = 0;
    SCHEDULED    = 1;
  }
}


message ScheduledDeliveryStatus {
  enum Enum {
    UNKNOWN = 0;

    SCHEDULED   = 1;
    INPROGRESS  = 2;
    FINISHED    = 3;
  }
}


message NotificationAttachmentType {
  enum Enum {
    UNKNOWN = 0;

    IMAGE = 1;
    AUDIO = 2;
    VIDEO = 3;
  }
}


message RateLimit {
  int32 limit           = 1;
  int32 interval_count  = 2;
  Unit  interval_unit   = 3;

  enum Unit {
    HOUR = 0;
    DAY = 1;
  }
}


message Campaign {
  oneof campaign {
    ScheduledNotificationCampaign     scheduled_notification_campaign  = 1;
    AutomatedNotificationCampaign     automated_notification_campaign  = 2;
  }
}

message CreateRequest {
  auth.v1.AuthContext auth_context = 1;

  string name = 2;
  CampaignType.Enum campaign_type = 3;
}
message CreateResponse {
  Campaign campaign = 1;
}

message ListRequest {
  auth.v1.AuthContext auth_context = 1;

  CampaignType.Enum   campaign_type    = 5;
  CampaignStatus.Enum campaign_status  = 6;

  // filter
  string keyword   = 7;

  // paging
  int32 page       = 8;
  int32 page_size  = 9;
}
message ListResponse {
  repeated Campaign campaigns = 1;
}

message ArchiveRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
}
message ArchiveResponse {
}



message DuplicateRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
  string name = 6;
}
message DuplicateResponse {
  Campaign campaign = 1;
}



message RenameRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
  string name       = 6;
}
message RenameResponse {
}



message PublishRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
}
message PublishResponse {
}



message UnpublishRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
}
message UnpublishResponse {
}



message UnarchiveRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
}
message UnarchiveResponse {
}



message SendTestRequest {
  auth.v1.AuthContext auth_context = 1;

  int32 campaign_id = 5;
}
message SendTestResponse {
}



message UpdateNotificationSettingsRequest{
  auth.v1.AuthContext auth_context                                    = 1;

  int32 campaign_id                                                   = 5;
  string              experience_id                                   = 6;

  string ui_state                                                     = 10;

  string              notification_body                               = 11;
  string              notification_title                              = 12;

  string              notification_attachment_url                     = 13;
  NotificationAttachmentType.Enum      notification_attachment_type  = 14;

  NotificationTapBehaviorType.Enum     notification_tap_behavior_type = 15;
  NotificationTapPresentationType.Enum notification_tap_behavior_presentation_type = 16;
  string                          notification_tap_behavior_url       = 17;

  bool                notification_ios_content_available              = 18;
  bool                notification_ios_mutable_content                = 19;
  string              notification_ios_sound                          = 20;
  string              notification_ios_category_identifier            = 21;
  string              notification_ios_thread_identifier              = 22;

  string              notification_android_channel_id                 = 23;
  string              notification_android_sound                      = 24;
  string              notification_android_tag                        = 25;

  int32               notification_expiration                         = 26;

  map<string,string>  notification_attributes                         = 27;

  bool                notification_alert_option_push_notification     = 28;
  bool                notification_alert_option_notification_center   = 29;
  bool                notification_alert_option_badge_number          = 30;
}
message UpdateNotificationSettingsResponse{}


message UpdateScheduledDeliverySettingsRequest{
  auth.v1.AuthContext auth_context                                    = 1;

  int32 campaign_id                                                   = 5;

  string ui_state                                                     = 10;

  SegmentCondition.Enum    segment_condition                         = 11;
  repeated string           segment_ids                               = 12;

  ScheduledType.Enum       scheduled_type                            = 13;
  google.protobuf.Timestamp scheduled_timestamp                       = 14;
  string                    scheduled_time_zone                       = 15;
  bool                      scheduled_use_local_device_time           = 16;
}
message UpdateScheduledDeliverySettingsResponse{ }


message UpdateAutomatedDeliverySettingsRequest{
  auth.v1.AuthContext auth_context                                    = 1;

  int32 campaign_id                                                   = 5;

  string ui_state                                                     = 10;

  SegmentCondition.Enum segment_condition                            = 11;
  repeated string     segment_ids                                     = 12;

  bool                automated_monday                                = 13;
  bool                automated_tuesday                               = 14;
  bool                automated_wednesday                             = 15;
  bool                automated_thursday                              = 16;
  bool                automated_friday                                = 17;
  bool                automated_saturday                              = 18;
  bool                automated_sunday                                = 19;

  string              automated_start_date                            = 20;
  string              automated_end_date                              = 21;
  int32               automated_start_time                            = 22;
  int32               automated_end_time                              = 23;
  string              automated_time_zone                             = 24;
  bool                automated_use_local_device_time                 = 25;
  string              automated_event_name                            = 26;
  bool                automated_frequency_single_use                  = 29;

  rover.protobuf.PredicateAggregate automated_event_predicates        = 30;

  repeated RateLimit  automated_frequency_limits                      = 31;
}
message UpdateAutomatedDeliverySettingsResponse{ }


//
// for more, see https://paper.dropbox.com/doc/Campaign-Model-iDaks5RstsRN0X2SDCWsv
//
message ScheduledNotificationCampaign {
  int32               campaign_id                                     = 1;

  string              name                                            = 2;

  CampaignStatus.Enum campaign_status                                = 3;

  string experience_id                                                = 4;

  google.protobuf.Timestamp created_at                                = 8;
  google.protobuf.Timestamp updated_at                                = 9;

  string ui_state                                                     = 10;

  SegmentCondition.Enum segment_condition                            = 11;
  repeated string     segment_ids                                     = 12;

  string              notification_body                               = 20;
  string              notification_title                              = 21;

  string                     notification_attachment_url              = 22;
  NotificationAttachmentType.Enum notification_attachment_type             = 23;

  NotificationTapBehaviorType.Enum     notification_tap_behavior_type = 24;
  NotificationTapPresentationType.Enum notification_tap_behavior_presentation_type     = 25;
  string                          notification_tap_behavior_url       = 26;

  bool                notification_ios_content_available              = 27;
  bool                notification_ios_mutable_content                = 28;
  string              notification_ios_sound                          = 29;
  string              notification_ios_category_identifier            = 30;
  string              notification_ios_thread_identifier              = 31;

  string              notification_android_channel_id                 = 32;
  string              notification_android_sound                      = 33;
  string              notification_android_tag                        = 34;

  int32               notification_expiration                         = 35;

  map<string,string>  notification_attributes                         = 36;

  bool                notification_alert_option_push_notification     = 37;
  bool                notification_alert_option_notification_center   = 38;
  bool                notification_alert_option_badge_number          = 39;

  ScheduledType.Enum           scheduled_type                        = 40;
  google.protobuf.Timestamp scheduled_timestamp                       = 41;
  string                  scheduled_time_zone                         = 42;
  bool                    scheduled_use_local_device_time             = 43;
  ScheduledDeliveryStatus.Enum scheduled_delivery_status                   = 44;
}

message AutomatedNotificationCampaign {
  int32               campaign_id                                     = 1;
  string              name                                            = 2;

  CampaignStatus.Enum campaign_status                                = 3;

  string              experience_id                                   = 4;

  google.protobuf.Timestamp created_at                                = 8;
  google.protobuf.Timestamp updated_at                                = 9;

  string ui_state                                                     = 10;

  SegmentCondition.Enum segment_condition                            = 11;
  repeated string     segment_ids                                     = 12;

  string              notification_body                               = 20;
  string              notification_title                              = 21;

  string                      notification_attachment_url             = 22;
  NotificationAttachmentType.Enum  notification_attachment_type      = 23;

  NotificationTapBehaviorType.Enum     notification_tap_behavior_type = 24;
  NotificationTapPresentationType.Enum notification_tap_behavior_presentation_type = 25;
  string                          notification_tap_behavior_url       = 26;

  bool                notification_ios_content_available              = 27;
  bool                notification_ios_mutable_content                = 28;
  string              notification_ios_sound                          = 29;
  string              notification_ios_category_identifier            = 30;
  string              notification_ios_thread_identifier              = 31;

  string              notification_android_channel_id                 = 32;
  string              notification_android_sound                      = 33;
  string              notification_android_tag                        = 34;

  int32               notification_expiration                         = 35;

  map<string,string>  notification_attributes                         = 36;

  bool                notification_alert_option_push_notification     = 37;
  bool                notification_alert_option_notification_center   = 38;
  bool                notification_alert_option_badge_number          = 39;

  bool                automated_monday                                = 46;
  bool                automated_tuesday                               = 47;
  bool                automated_wednesday                             = 48;
  bool                automated_thursday                              = 49;
  bool                automated_friday                                = 50;
  bool                automated_saturday                              = 51;
  bool                automated_sunday                                = 52;

  // start/end dates yyyy-mm-dd
  string              automated_start_date                            = 53;
  string              automated_end_date                              = 54;
  int32               automated_start_time                            = 55;
  int32               automated_end_time                              = 56;
  string              automated_time_zone                             = 57;
  bool                automated_use_local_device_time                 = 58;

  string                            automated_event_name              = 59;
  rover.protobuf.PredicateAggregate automated_event_predicates        = 60;

  bool                automated_frequency_single_use                  = 61;
  repeated RateLimit  automated_frequency_limits                      = 62;
}
